update input ui

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Seleksi Full Stack Developer</title>
 	</head>
 	<body>
-		<h2>Masukkan Data</h2>
+		<h4>Masukkan Data Pengguna</h4>
 		<form action="data.php" method="post">
-			<label for="data">dengan format NAMA[spasi]UMUR[spasi]KOTA</label>
+			<label for="data">format NAMA[spasi]UMUR[spasi]KOTA</label>
 			<br />
-			<input type="text" name="data" id="data" required />
+			<br />
+			<input type="text" name="data" id="data" size="40" required />
+			<br />
 			<br />
 			<button type="submit">Submit</button>
 		</form>
